cudaq/test/Transforms/qir_claim_nullwire.qke
// ========================================================================== //
// Copyright (c) 2026 NVIDIA Corporation & Affiliates.                        //
// All rights reserved.                                                       //
//                                                                            //
// This source code and the accompanying materials are made available under   //
// the terms of the Apache License 2.0 which accompanies this distribution.   //
// ========================================================================== //

// RUN: cudaq-opt --convert-to-qir-api=api=base-profile %s -verify-diagnostics

// Verifies that a NullWireOp whose auto-assigned qubit id overlaps a
// pre-annotated AllocaOp causes the pass to emit a diagnostic and fail.
// This exercises the C4 fix in claimPhysicalQubits: the return value of the
// overlap check for NullWireOp and NullCableOp paths must propagate to
// hasError.

module attributes {cc.sizeof_string = 32 : i64, llvm.data_layout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128", llvm.triple = "x86_64-unknown-linux-gnu"} {
  func.func @nullwire_overlaps_annotated_alloc() attributes {"cudaq-entrypoint", "cudaq-kernel"} {
    // NullWireOp is processed first in IR order and auto-assigned qubit 0.
    %wire = quake.null_wire
    // AllocaOp pre-annotated with StartingOffset = 0 conflicts with the
    // NullWireOp already assigned to qubit 0.
    // expected-error @+1 {{overlaps physical qubit id 0}}
    %qref = quake.alloca !quake.ref {StartingOffset = 0 : i64}
    quake.x %qref : (!quake.ref) -> ()
    %meas, %wire_out = quake.mz %wire : (!quake.wire) -> (!quake.measure, !quake.wire)
    quake.return_wire %wire_out : !quake.wire
    return
  }
}
